--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 9d07f1c
-	trimbase = 
+	trim = pr2_description
+	base = 016f1df
+	trimbase = 9d07f1c
 	parent = upstream
 	previous = 7d95ea7
