--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 733a3f1
-	trimbase = 
+	trim = panda_description
+	base = 372391d
+	trimbase = 733a3f1
 	parent = upstream
 	previous = 7d95ea7
