--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 81543ca
-	trimbase = 
+	trim = fanuc_moveit_config
+	base = e903ced
+	trimbase = 81543ca
 	parent = upstream
 	previous = 7d95ea7
