--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = c43f836
-	trimbase = 
+	trim = moveit_resources
+	base = 748dca4
+	trimbase = c43f836
 	parent = upstream
 	previous = 7d95ea7
