--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = c9f0742
-	trimbase = 
+	trim = panda_moveit_config
+	base = c7a39f2
+	trimbase = c9f0742
 	parent = upstream
 	previous = 7d95ea7
