--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 36df7d5
-	trimbase = 
+	trim = fanuc_description
+	base = 8fe1526
+	trimbase = 36df7d5
 	parent = upstream
 	previous = 7d95ea7
