--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 372391d
+	base = d32a4c2
 	trimbase = 
 	parent = release/rolling/moveit_resources_panda_description
-	previous = 
+	previous = 372391d
