--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c7a39f2
+	base = 710e32a
 	trimbase = 
 	parent = release/rolling/moveit_resources_panda_moveit_config
-	previous = 
+	previous = c7a39f2
