--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8fe1526
+	base = 0075813
 	trimbase = 
 	parent = release/rolling/moveit_resources_fanuc_description
-	previous = 
+	previous = 8fe1526
