--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f0cad48
+	base = f78f0ce
 	trimbase = 
 	parent = rpm/rolling/moveit_resources_fanuc_description
-	previous = 
+	previous = f0cad48
