--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 016f1df
+	base = 85159c8
 	trimbase = 
 	parent = release/rolling/moveit_resources_pr2_description
-	previous = 
+	previous = 016f1df
