--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 44395ad
+	base = d9ce8f6
 	trimbase = 
 	parent = rpm/rolling/moveit_resources_pr2_description
-	previous = 
+	previous = 44395ad
