--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7764601
+	base = 00182be
 	trimbase = 
 	parent = rpm/rolling/moveit_resources_panda_description
-	previous = 
+	previous = 7764601
