--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 748dca4
+	base = babb5b0
 	trimbase = 
 	parent = release/rolling/moveit_resources
-	previous = 
+	previous = 748dca4
