--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9180333
+	base = 842d619
 	trimbase = 
 	parent = rpm/rolling/moveit_resources
-	previous = 
+	previous = 9180333
