--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e903ced
+	base = 48835c3
 	trimbase = 
 	parent = release/rolling/moveit_resources_fanuc_moveit_config
-	previous = 
+	previous = e903ced
