--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a3b2ea7
+	base = a6ca47b
 	trimbase = 
 	parent = rpm/rolling/moveit_resources_fanuc_moveit_config
-	previous = 
+	previous = a3b2ea7
