--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6b11a38
+	base = 6b1b46a
 	trimbase = 
 	parent = rpm/rolling/moveit_resources_panda_moveit_config
-	previous = 
+	previous = 6b11a38
