--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_resources
-	base = 9dac15e
-	trimbase = 
+	base = 4e5e584
+	trimbase = 9dac15e
 	parent = upstream
 	previous = 2723d9e
