--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = panda_moveit_config
-	base = 504160c
-	trimbase = 
+	base = 29c12a1
+	trimbase = 504160c
 	parent = upstream
 	previous = 2723d9e
