--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = pr2_description
-	base = 06c33c6
-	trimbase = 
+	base = f14d0fc
+	trimbase = 06c33c6
 	parent = upstream
 	previous = 2723d9e
