--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = fanuc_moveit_config
-	base = ed01644
-	trimbase = 
+	base = 49a97c0
+	trimbase = ed01644
 	parent = upstream
 	previous = 2723d9e
