--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = panda_description
-	base = 0202511
-	trimbase = 
+	base = 935b325
+	trimbase = 0202511
 	parent = upstream
 	previous = 2723d9e
