--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = fanuc_description
-	base = 785eb50
-	trimbase = 
+	base = a0b0969
+	trimbase = 785eb50
 	parent = upstream
 	previous = 2723d9e
