--- a/config/panda_ros_controllers.yaml
+++ b/config/panda_ros_controllers.yaml
@@ -5,8 +5,11 @@ controller_manager:
     panda_arm_controller:
       type: joint_trajectory_controller/JointTrajectoryController
 
-    joint_state_controller:
-      type: joint_state_controller/JointStateController
+    panda_hand_controller:
+      type: position_controllers/GripperActionController
+
+    joint_state_broadcaster:
+      type: joint_state_broadcaster/JointStateBroadcaster
 
 
 panda_arm_controller:
@@ -24,3 +27,7 @@ panda_arm_controller:
       - panda_joint5
       - panda_joint6
       - panda_joint7
+
+panda_hand_controller:
+  ros__parameters:
+    joint: panda_finger_joint1
