--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"2.0.2-1": ["Tue May 25 2021", "Mike Lautman", "mike@picknik.ai"]}
+{"2.0.3-1": ["Thu Sep 16 2021", "Mike Lautman", "mike@picknik.ai"], "2.0.2-1": ["Tue May 25 2021", "Mike Lautman", "mike@picknik.ai"]}
